ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: "k8s-test.com"
      http:
        paths:
          - path: "/microservice-a"
            pathType: Prefix
            backend:
              service:
                name: microservice-a-cluster-ip-service
                port: 
                  number: 8080
          - path: "/microservice-b"
            pathType: Prefix
            backend:
              service:
                name: microservice-b-cluster-ip-service
                port: 
                  number: 8081
          - path: "/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port: 
                  number: 3000
